prevent scrollbar from shifting page width

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,6 +1,7 @@
 body {
   font-family: 'Helvetica Neue', 'Arial', sans-serif;
   line-height: 1.5em;
+  overflow-y: scroll;
 }
 
 em {
